FahMon: The Folding@home client monitoring program

v2.3.2b

    General

    * Fixed bug that caused xyz files to be saved with no project number.
    * A badly formatted psummary no longer produces error message, rather logs a
      warning silently to the log.
    * Added Italian translation.
    * Fixed bug with fractional deadlines still being truncated.

    Windows

    * Maximised restoring from system tray now works. Finally.
    * Updated MSVC project to version 9.

    OS X

    * Fixed log window not scrolling.
    * Fixed line encoding bug when monitoring MSW clients.

v2.3.2a (16/02/08)

    General

    * Added German translation.
    * Fixed endian swap bug when monitoring PPC Macs.
    * FahMon now works on Macs running OS X.
    * Fixed some minor translation bugs.

    Windows

    * Fixed window state bug that caused FahMon to to restore correctly from the
      system tray icon or the taskbar.
    * Fixed regression in the benchmarks dialog that would always display old
      benchmarks by location rather than name.

v2.3.2 (08/02/08)

    General

    * Updated licence information.
    * Included code from qd to retrieve PRCG, issue date, username and
      teamnumber.
    * Removed redundant (unstable) code.
    * Fixed bug that prevented FahMon from being restored to maximised state.
    * Fixed bug that formatted dates incorrectly in Web Output.
    * Added total PPD and update dates to Simple Web and Text output.
    * Fixed bug in progress calculation system that reported 100% as 0%
    * Fixed bug that broke effective frame time for some clients.
    * Fixed bug in monitoring system that broke PPD/ETA for projects with less
      than 100 frames.
    * Fixed proxy username text box sizing bug.
    * Cleaned up project download settings. Users migrating from =< 2.3.1 will
      need to enter their settings again if they were using an "alternate"
      download location.
    * WebApp web output now copies images automatically.