@@ -15,6 +15,8 @@ Filipe Rodrigues
 Kevin Bernhagen
 Dieter Vrancken
 Christian Bargmann
+Bruce Borden
+Mark Gerber
 
 
 Translation team:
